--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -9,8 +9,9 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: SECRET_KEY
-        generateValue: true # Será gerado no Render
+        generateValue: true
       - key: JWT_SECRET_KEY
-        generateValue: true # Será gerado no Render
-      - key: GOOGLE_APPLICATION_CREDENTIALS # <-- Esta variável deve ser configurada no Render
+        generateValue: true
+      - key: GOOGLE_APPLICATION_CREDENTIALS
         sync: false # Você precisará definir manualmente no painel do Render
+
