--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/dist"
-      }
-    }
-  ],
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "env": {
-    "VITE_API_BASE_URL": "https://beepy-api.onrender.com"
-  }
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
