--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variables file
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -91,18 +92,15 @@ firestore-debug.log
 *.sqlite
 *.sqlite3
 
-# Secrets e configurações sensíveis (com exceções)
+# Secrets e configurações sensíveis
 *.json
+!vercel.json
 !package*.json
 !tsconfig*.json
-!vercel.json
-!firebase.json
-projeto-beepy-firebase-adminsdk-*.json
 
 # Temporary files
 *.tmp
 *.temp
 
-# Arquivos de ambiente e configs locais
 backend/.env
 beepy-api.env
